samples/_failures_safe/1761627487_afda31_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8fd09945.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_8fd09945.c:161:35: error: missing terminating " character
  161 |         case TOKEN_STRING: printf("
      |                                   ^
./samples/SAFE/__tmp_8fd09945.c:161:9: error: expected expression at end of input
  161 |         case TOKEN_STRING: printf("
      |         ^~~~
./samples/SAFE/__tmp_8fd09945.c:161:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8fd09945.c:161:9: error: expected declaration or statement at end of input
